--- a/VKNews/NewsFeed/Cell/NewsFeedCell.xib
+++ b/VKNews/NewsFeed/Cell/NewsFeedCell.xib
@@ -18,11 +18,11 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qt1-Vt-jYu" userLabel="Card View">
-                        <rect key="frame" x="8" y="0.0" width="374" height="205"/>
+                        <rect key="frame" x="8" y="0.0" width="374" height="199"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3iQ-Uh-nuD" userLabel="Top View">
-                                <rect key="frame" x="11" y="5" width="350" height="36"/>
+                                <rect key="frame" x="8" y="8" width="358" height="36"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MGB-BH-WEe" customClass="WebImageView" customModule="VKNews" customModuleProvider="target">
@@ -31,14 +31,14 @@
                                         <color key="backgroundColor" systemColor="systemMintColor"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pH-yL-I1E">
-                                        <rect key="frame" x="44" y="2" width="298" height="16"/>
+                                        <rect key="frame" x="44" y="2" width="306" height="16"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                         <color key="textColor" red="0.17254901960784313" green="0.1764705882352941" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R4d-ZJ-9HH">
-                                        <rect key="frame" x="44" y="19" width="298" height="16"/>
+                                        <rect key="frame" x="44" y="19" width="306" height="16"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.50588235290000005" green="0.54901960780000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -47,14 +47,18 @@
                                 </subviews>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIr-yU-iGR">
-                                <rect key="frame" x="11" y="49" width="350" height="57"/>
+                                <rect key="frame" x="8" y="52" width="358" height="47"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zNk-9n-G99" customClass="WebImageView" customModule="VKNews" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="107" width="374" height="47"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ItM-fU-J15" userLabel="Bottom View">
-                                <rect key="frame" x="0.0" y="161" width="374" height="44"/>
+                                <rect key="frame" x="0.0" y="155" width="374" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x8m-PA-wbJ" userLabel="Like View">
@@ -127,16 +131,13 @@
                                     </view>
                                 </subviews>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zNk-9n-G99" customClass="WebImageView" customModule="VKNews" customModuleProvider="target">
-                                <rect key="frame" x="1" y="110" width="371" height="50"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bottomView" destination="ItM-fU-J15" id="DA7-iw-Y5K"/>
                 <outlet property="cardView" destination="Qt1-Vt-jYu" id="W99-jZ-gtW"/>
                 <outlet property="commentsLabel" destination="1Wc-kw-iPg" id="Jnr-Hg-qfY"/>
                 <outlet property="dateLabel" destination="R4d-ZJ-9HH" id="n38-Jb-VnI"/>
