--- a/VKNews/AuthViewController/AuthViewController.storyboard
+++ b/VKNews/AuthViewController/AuthViewController.storyboard
@@ -18,22 +18,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5p4-TO-LEr">
-                                <rect key="frame" x="135" y="411" width="120" height="35"/>
-                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <rect key="frame" x="117.66666666666669" y="406" width="155" height="45"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="BFR-X1-oTN"/>
-                                    <constraint firstAttribute="width" constant="120" id="Cat-7k-lc2"/>
+                                    <constraint firstAttribute="height" constant="45" id="BFR-X1-oTN"/>
+                                    <constraint firstAttribute="width" constant="155" id="Cat-7k-lc2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Войти в VK"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Войти в VK">
+                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="22"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="signInTouch:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dgQ-pt-K1R"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
                             <constraint firstItem="5p4-TO-LEr" firstAttribute="centerY" secondItem="vDu-zF-Fre" secondAttribute="centerY" id="KH3-P2-oAo"/>
                             <constraint firstItem="5p4-TO-LEr" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="SvM-jT-fD6"/>
@@ -46,11 +48,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
