--- a/VKNews/NewsFeed/NewsFeedViewController.storyboard
+++ b/VKNews/NewsFeed/NewsFeedViewController.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KgF-sU-PaE">
-                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="810"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="Vmz-BE-Iva"/>
@@ -29,9 +29,9 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
+                            <constraint firstItem="KgF-sU-PaE" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="AeG-Ft-0DT"/>
                             <constraint firstItem="KgF-sU-PaE" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Ho7-Ce-um5"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="KgF-sU-PaE" secondAttribute="bottom" id="R1J-bI-edi"/>
-                            <constraint firstItem="KgF-sU-PaE" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="S5G-xn-RTx"/>
                             <constraint firstItem="KgF-sU-PaE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="SoW-Qp-8zm"/>
                         </constraints>
                     </view>
