--- a/VKNews/AuthViewController/AuthViewController.storyboard
+++ b/VKNews/AuthViewController/AuthViewController.storyboard
@@ -17,17 +17,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ril-2n-fu5" customClass="GradientView" customModule="VKNews" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                        <color key="value" systemColor="systemCyanColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                        <color key="value" systemColor="systemIndigoColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5p4-TO-LEr">
-                                <rect key="frame" x="117.66666666666669" y="406" width="155" height="45"/>
+                                <rect key="frame" x="112.66666666666669" y="401" width="165" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="BFR-X1-oTN"/>
-                                    <constraint firstAttribute="width" constant="155" id="Cat-7k-lc2"/>
+                                    <constraint firstAttribute="height" constant="55" id="BFR-X1-oTN"/>
+                                    <constraint firstAttribute="width" constant="165" id="Cat-7k-lc2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                <color key="tintColor" systemColor="systemIndigoColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Войти в VK"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Войти в VK">
+                                    <backgroundConfiguration key="background" strokeWidth="1" strokeOutset="0.0">
+                                        <color key="strokeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </backgroundConfiguration>
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="22"/>
+                                    <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="signInTouch:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dgQ-pt-K1R"/>
@@ -35,10 +52,14 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="ril-2n-fu5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6Md-xK-7bT"/>
+                            <constraint firstAttribute="bottom" secondItem="ril-2n-fu5" secondAttribute="bottom" id="JaT-Mn-ETO"/>
                             <constraint firstItem="5p4-TO-LEr" firstAttribute="centerY" secondItem="vDu-zF-Fre" secondAttribute="centerY" id="KH3-P2-oAo"/>
                             <constraint firstItem="5p4-TO-LEr" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="SvM-jT-fD6"/>
+                            <constraint firstItem="ril-2n-fu5" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="aZu-8v-24r"/>
+                            <constraint firstItem="ril-2n-fu5" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="oyB-i6-gGv"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -48,6 +69,12 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
