--- a/VKNews/NewsFeed/NewsFeedViewController.storyboard
+++ b/VKNews/NewsFeed/NewsFeedViewController.storyboard
@@ -17,6 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcu-XB-B03" customClass="GradientView" customModule="VKNews" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                        <color key="value" systemColor="systemCyanColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                        <color key="value" systemColor="systemIndigoColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KgF-sU-PaE">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="810"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -27,12 +39,16 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="KgF-sU-PaE" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="AeG-Ft-0DT"/>
+                            <constraint firstItem="kcu-XB-B03" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="Fvl-Hu-mcr"/>
                             <constraint firstItem="KgF-sU-PaE" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Ho7-Ce-um5"/>
+                            <constraint firstItem="kcu-XB-B03" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="OKD-Ir-TeV"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="KgF-sU-PaE" secondAttribute="bottom" id="R1J-bI-edi"/>
                             <constraint firstItem="KgF-sU-PaE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="SoW-Qp-8zm"/>
+                            <constraint firstItem="kcu-XB-B03" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="cQ2-eS-GyE"/>
+                            <constraint firstAttribute="bottom" secondItem="kcu-XB-B03" secondAttribute="bottom" id="cxa-tb-Hea"/>
                         </constraints>
                     </view>
                     <connections>
@@ -47,6 +63,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
